# marginalia

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  DESIGN.md  Dockerfile  README.md  README.zh-CN.md  USAGE.md  USAGE.zh-CN.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: release.yml
alembic/versions/: 0001_initial.py  0002_additive_columns.py  0003_file_entries_folder_id_nullable.py  0004_repair_dangling_file_entries_fks.py  0005_sessions_end_reason_check.py  0006_conversations_session_turn_unique.py  0007_tasks_active_dedup_unique.py  0010_entry_metadata_fts_description.py  0013_reconcile_dead_ingest_files.py
desktop/: package-lock.json  package.json  vite.config.ts
desktop/src/: App.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/package/linux/: marginalia  marginalia-mcp
desktop/src-tauri/package/macos/: marginalia  marginalia-worker
desktop/src-tauri/package/windows/: marginalia-mcp.cmd  marginalia-worker.cmd  marginalia.cmd  nsis-hooks.nsh
desktop/src-tauri/resources/backend/: .gitkeep
desktop/src-tauri/src/: lib.rs
desktop/src/api/: client.ts
desktop/src/components/: ActivityPopover.tsx  BackendGate.tsx  LlmProfileEditor.tsx  MarkdownView.tsx  SessionList.tsx  Sidebar.tsx  StatusBar.tsx  TopBar.tsx  TurnView.tsx
desktop/src/hooks/: useTemporaryValue.ts
desktop/src/lib/: i18n.ts  markdown.ts  prefs.ts
desktop/src/pages/: ChatPage.tsx  HelpPage.tsx  LibraryPage.tsx  SearchPage.tsx  SettingsPage.tsx
desktop/src/styles/: globals.css
desktop/src/types/: api.ts
samples/: architecture.md
scripts/: package-windows-portable.mjs  prepare-backend.mjs
scripts/cpython/: resolve_packaged_cpython_runtime.py
skills/: README.md
skills/discover-and-curate/: SKILL.md
skills/ingest-vault/: SKILL.md
skills/research-with-marginalia/: SKILL.md
src/marginalia/: __init__.py  __main__.py  citations.py  config.py  main.py  mcp_server.py  server_main.py  worker.py
src/marginalia/agent/: compression_adapter.py  headroom_adapter.py  runtime.py  stable_context.py  tool_display.py  types.py
src/marginalia/agent/tools/: __init__.py  analyze_container.py  list_catalogs.py  list_files_in_folder.py  list_folder.py  list_folders.py  materialize_view.py  query_log.py  query_sql.py  read_catalog.py  read_entries_metadata.py  read_files.py  recall_knowledge.py  resolve_tag.py  search_journal.py  search_metadata.py
src/marginalia/api/: http_headers.py  routes_agent.py  routes_chat.py  routes_exports.py  routes_file_entries.py  routes_files.py  routes_folders.py  routes_mcp.py  routes_semantic_index.py  routes_settings.py  routes_tasks.py  routes_tend.py  routes_upload.py  routes_user_files.py
src/marginalia/cli/: client.py  commands.py  eval_cmd.py  init_cmd.py  oneshot.py  render.py  repl.py  storage_cmd.py
src/marginalia/db/: bootstrap.py  engine.py
src/marginalia/db/models/: ai_recall.py  ai_structural.py  audit.py  base.py  enums.py  task_outcomes.py  tasks.py  user_visible.py
src/marginalia/eval/: __init__.py  core.py
src/marginalia/llm/: __init__.py  factory.py  model_controls.py  openai_adapter.py  prompt_cache.py  tagged_response.py
src/marginalia/pipelines/: __init__.py  _long_index.py  _text_indexer.py  archive.py  base.py  docx.py  image.py  log.py  pdf.py  pdf_text.py  pptx.py  spreadsheet.py  text.py
src/marginalia/repositories/: __init__.py  audit_events.py  catalogs.py  conversations.py  entries.py  entry_relations.py  entry_tags.py  files.py  folders.py  journal.py  sessions.py  tags.py  task_outcomes.py  tasks.py  views.py
src/marginalia/schemas/: __init__.py
src/marginalia/semantic/: __init__.py  embeddings.py  index.py  rerank.py
src/marginalia/services/: config_overlay.py  entries.py  exports.py  folders.py  ingest_status.py  reprocess.py  scan.py  sync.py  upload.py  user_files.py
src/marginalia/tasks/: __init__.py  enqueue.py  kinds.py  runner.py  usage.py
src/marginalia/tasks/handlers/: __init__.py  _mining_helpers.py  enrich_tags.py  ingest_file.py  mine_citation_graph.py  mine_corpus_evidence.py  mine_session_cooccurrence.py  mine_tag_overlap.py  normalize_tags.py  periodic_tick.py  propose_views.py  prune.py  purge_deleted_files.py  rebuild_semantic_index.py  recover_stuck_tasks.py  reflect_turn.py  refresh_entry_extra.py  restructure_catalogs.py  restructure_catalogs_apply.py  suggest_lifecycle.py  summarize_session.py  vet_relations.py
src/marginalia/utils/: ids.py
tests/: conftest.py  test_agent_e2e.py  test_agent_tools_e2e.py  test_archive_image_drilldown_e2e.py  test_chat_concurrency_e2e.py  test_chat_quick_mode_e2e.py  test_citation_locator.py  test_cli_oneshot_e2e.py  test_cli_render_unit.py  test_compression_e2e.py  test_container_e2e.py  test_discover_e2e.py  test_dispatcher_e2e.py  test_duckdb_tools_e2e.py  test_enrich_tags_e2e.py  test_entry_metadata_fts_unit.py  test_eval_beir_e2e.py  test_eval_ranking_unit.py  test_export_e2e.py  test_file_entry_path_e2e.py  test_folders_ingest_status_e2e.py  test_git_repo_e2e.py  test_headroom_adapter_unit.py  test_image_pipeline_e2e.py  test_ingest_e2e.py  test_ingest_status_reconciliation.py  test_lifecycle_e2e.py  test_lifecycle_switch_e2e.py  test_llm_reasoning_controls_unit.py  test_long_document_indexing_unit.py  test_low_quality_reprocess_e2e.py  test_mcp_server_e2e.py  test_mcp_server_unit.py  test_mine_corpus_evidence_e2e.py  test_mirror_e2e.py  test_normalize_tags_e2e.py  test_office_pipelines_e2e.py  test_office_size_caps_unit.py  test_pdf_ocr_cap_e2e.py  test_pdf_ocr_e2e.py  (+38 more)
