[project]
name = "marginalia"
version = "0.2.2"
description = "A library-science-inspired personal knowledge management system with LLM agents."
requires-python = ">=3.11"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
    { name = "shenmintao" },
]
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14",
    "aiosqlite>=0.20",
    "asyncpg>=0.30",
    "greenlet>=3.1",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-multipart>=0.0.20",
    "aiofiles>=24.1",
    "aioboto3>=13.2",
    "openai>=1.55",
    "anthropic>=0.40",
    "pypdf>=5.0",
    "pypdfium2>=4.30",
    "Pillow>=10.0",
    "duckdb>=1.0",
    "prompt_toolkit>=3.0",
    "httpx>=0.27",
    "asgi-lifespan>=2.1",
    "sse-starlette>=2.1",
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "py7zz @ https://github.com/shenmintao/py7zz/releases/download/v1.1.5/py7zz-1.1.5-py3-none-macosx_10_9_universal2.whl ; platform_system == 'Darwin'",
    "py7zz @ https://github.com/shenmintao/py7zz/releases/download/v1.1.5/py7zz-1.1.5-py3-none-manylinux1_x86_64.whl ; platform_system == 'Linux' and platform_machine == 'x86_64'",
    "py7zz @ https://github.com/shenmintao/py7zz/releases/download/v1.1.5/py7zz-1.1.5-py3-none-manylinux2014_aarch64.whl ; platform_system == 'Linux' and platform_machine == 'aarch64'",
    "py7zz @ https://github.com/shenmintao/py7zz/releases/download/v1.1.5/py7zz-1.1.5-py3-none-win_amd64.whl ; platform_system == 'Windows' and platform_machine == 'AMD64'",
    "py7zz @ https://github.com/shenmintao/py7zz/releases/download/v1.1.5/py7zz-1.1.5-py3-none-win_arm64.whl ; platform_system == 'Windows' and platform_machine == 'ARM64'",
    "glowpy @ git+https://github.com/shenmintao/glowpy.git@main",
]

[project.scripts]
marginalia = "marginalia.cli.repl:main"
marginalia-worker = "marginalia.worker:main"

[project.optional-dependencies]
semantic = [
    "sqlite-vec>=0.1.6",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "fpdf2>=2.8",
    "moto[s3]>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/marginalia"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.venv",
    "/.pytest_cache",
    "/desktop/node_modules",
    "/desktop/src-tauri/target",
    "/dist",
    "/runtime",
    "/tests/_*_e2e_data",
    "/tests/_e2e_data",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
